substrate/frame/election-provider-support/solution-type/tests/ui/fail/no_annotations.stderr
error: Expected binding: `VoterIndex = ...`
  --> tests/ui/fail/no_annotations.rs:21:2
   |
21 |     u16,
   |     ^^^
